[tool.poetry]
name = "orx"
version = "0.1.0"
description = "A simple and powerful Python wrapper for the Discord API"
authors = ["tag-epic", "VincentRPS <vincentbusiness55@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nextcore = {git = "https://github.com/nextsnake/nextcore"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
